Minor fixes related to database upgrade for "profile views"

--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -3058,7 +3058,7 @@ msgid ""
 "you last checked %(last_check_time_str)s. \n"
 "            "
 msgstr ""
-"%(num_views_since_last_check)s han visitado tu perfil desde la última vez que lo revisaste %(last_check_time_str)s. \n"
+"%(num_views_since_last_check)s personas han visitado tu perfil desde la última vez que lo revisaste %(last_check_time_str)s. \n"
 "            "
 
 
