--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -2817,8 +2817,7 @@ msgid ""
 msgstr ""
 "¡Bienvenido!\n"
 "\n"
-"Mi nombre es Alex, y soy el creador de %(app_name)s. Esta web es gratuita y "
-"se sustenta de los miembros VIP.\n"
+"Mi nombre es Alex, y soy el creador de %(app_name)s."
 "\n"
 "Puedes empezar a buscar otros usuarios inmediatamente usando la caja gris "
 "'el buscador' que está en la parte superior de esta página. Una vez "
