Updated the new user welcome message, and other minor errors.

--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -2543,11 +2543,13 @@ msgstr ""
 "box that is in the upper part of every page. Once you find a profile that "
 "you are interested in, you take the following actions directly from their "
 "profile:\n"
-"- Add them to your \"favorites\".\n"
+"\n"
+"- Write a message to them.\n"
+"- Invite them to be a \"chat friend\"\n"
 "- Send them a %(replacement1)s.\n"
+"- Add them to your \"favorites\".\n"
 "- Give them access to your \"private\" photos (by clicking on the key "
 "icon).\n"
-"- Write a message to them.\n"
 "\n"
 "Additionally, to keep track of the profiles that you have had contact with, "
 "you can click on the \"Contacts\" tab in the upper part of the page. There, "
@@ -2555,7 +2557,10 @@ msgstr ""
 "given and received. Additionally, there you can see the profiles that you "
 "have marked as favorites\n"
 "\n"
-"it is *very* recomendable that you put a photo in your profile, since by "
+"Have a look at the live chat in the bottom right corner of this window. Using the chat, "
+"you can chat with a group of people in the \"chat groups\" or you can chat in private with your \"chat friends\".\n"
+"\n"
+"It is *very* recomendable that you put a photo in your profile, since by "
 "doing this you will dramatically increase the number and quality of people "
 "that contact you Furthermore, without photos, many people will not respond "
 "to your messages If you wish to remain anonymous, you can upload photos but "
