--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -174,7 +174,7 @@ msgid ""
 "count in this limit -- you can always respond to messages without using your "
 "quota"
 msgstr ""
-"Las personas con quien ya te has enviado o recibido algún mensaje en el "
+"Las personas con quien ya te hayas enviado o recibido algún mensaje en el "
 "pasado no cuentan en este límite -- siempre puedes responder a mensajes sin "
 "usar tu cuota"
 
@@ -324,9 +324,9 @@ msgstr ""
 "Sólo puedes enviar %(guest_num)s mensajes a cada miembro en un periodo de "
 "%(hours)s horas. Sin embargo, si el otro miembro es un \"amigo de chat\" tuyo"
 "%(or_if_vip_member_txt)s, podrás enviarle %(chat_friend_num)s mensajes cada "
-"%(hours)s horas. <br><br>Puedes enviar mas mensajes a este socio "
-"%(txt_for_when_quota_resets)s, y debido a que ya has tenido contato con este "
-"socio, los mensajes futuros a este socio no se contará contra la cuota para "
+"%(hours)s horas. <br><br>Puedes enviar más mensajes a este socio "
+"%(txt_for_when_quota_resets)s, y debido a que ya has tenido contacto con este "
+"socio, los mensajes futuros a este socio no contarán contra la cuota para "
 "contactar otros socios."
 
 #: rs/constants.py:659
@@ -786,7 +786,7 @@ msgstr "y"
 #: rs/email_utils.py:626
 #, python-format
 msgid "You can see who has contacted you in %(link_to_build)s"
-msgstr "Puedes ver quien te ha contactado en %(link_to_build)s"
+msgstr "Puedes ver quién te ha contactado en %(link_to_build)s"
 
 #: rs/email_utils.py:629 rs/menubar.py:102 rs/profile_utils.py:100
 msgid "Contacts"
@@ -2623,20 +2623,26 @@ msgstr ""
 "¡Bienvenido!\n"
 "\n"
 "Mi nombre es Alex, y soy el creador de %(app_name)s.\n"
-"Puedes empezar a buscar otros usuarios inmediatamente usando la caja gris "
-"'el buscador' que está en la parte superior de esta página. Una vez "
+"\n"
+"Puedes empezar a buscar otros usuarios inmediatamente usando "
+"'el buscador' que está en la parte superior de esta página (con el fondo grís). Una vez "
 "encuentres una persona que te interese, puedes hacer directamente desde su "
 "perfil lo siguiente:\n"
-"- Añadirla a tus \"favoritos\".\n"
-"- Enviarle un %(replacement1)s.\n"
-"- Darle acceso a tus fotos \"privadas\".\n"
-"- Enviarle un mensaje.\n"
 "\n"
-"También, para poder rastrear con quien has mantenido ya algún tipo de "
+"- Enviarle un mensaje.\n"
+"- Invitarle a ser un \"chat amigo\"\n"
+"- Enviarle un %(replacement1)s.\n"
+"- Añadirla a tus \"favoritos\".\n"
+"- Darle acceso a tus fotos \"privadas\".\n"
+"\n"
+"Ademas, para poder rastrear con quien has mantenido ya algún tipo de "
 "contacto, puedes hacer clic en la pestaña de \"Contactos\" en la parte "
 "superior de la página. Allí podrás ver los %(replacement2)s y accesos "
 "privados que has enviado y/o recibido. También podrás ver los perfiles que "
 "has marcado como favoritos.\n"
+"\n"
+"También, puedes echar un vistazo al chat en vivo en la pequeña ventana en la parte inferior derecha de esta página. "
+"Con el chat, puedes hablar con un grupo de personas en los \"grupos de chat\" o en privado con tus \"chats amigos\".\n"
 "\n"
 "Es *muy* recomendable que pongas fotos en tu perfil, ya que de esta manera "
 "aumentas mucho el número y la calidad de las personas que te contactarán. "
@@ -2878,7 +2884,7 @@ msgid ""
 "member."
 msgstr ""
 "\n"
-"Si quieres aumentar este limite a %(max_requests)s, podrías hacerte miembro "
+"Si quieres aumentar este límite a %(max_requests)s, podrías hacerte miembro "
 "VIP."
 
 #: rs/store_data.py:1017
@@ -2967,7 +2973,7 @@ msgid ""
 "There are no more people that match your search \n"
 "criteria, we are re-doing the search with the following settings:"
 msgstr ""
-"No hay más personas que coinciden con tu criterio de búsqueda.<br> Para "
+	"No hay más personas que coincidan con tu criterio de búsqueda.<br> Para "
 "mostrarte más resultados, estamos rehaciendo la búsqueda con: "
 
 #: rs/text_fields.py:64
@@ -3995,7 +4001,7 @@ msgstr[1] "%(days)s días"
 #: rs/utils.py:510
 #, python-format
 msgid "%(hours)s hour"
-msgid_plural "%(hours)s hours"
+msgid_plural "%(hours)s horas"
 msgstr[0] "%(hours)s hora"
 msgstr[1] "%(hours)s horas"
 
@@ -4750,7 +4756,7 @@ msgid ""
 "        "
 msgstr ""
 "\n"
-"Los pagos son procesadas a través de PayPal (una compañía del grupo eBay, y "
+"Los pagos son procesados a través de PayPal (una compañía del grupo eBay, y "
 "una de las empresas de pago online más grandes del mundo) y se puede hacer "
 "con tarjeta de crédito o una cuenta PayPal.\n"
 "    "
@@ -5143,7 +5149,7 @@ msgid ""
 msgstr ""
 "\n"
 "Incremento de tu cuota de mensajes que te permite contactar con %(vip)s "
-"personas nuevas cada día (contra %(free)s para socios no-VIP)."
+"personas nuevas cada día (en vez de %(free)s para socios no-VIP)."
 
 #: rs/templates/user_main_helpers/vip_benefits.html:8
 #, python-format
@@ -5171,7 +5177,7 @@ msgid ""
 "                vip_chat_friends %(vip)s %(free)s"
 msgstr ""
 "\n"
-"Incremento hasta %(vip)s \"chats amigos\" (contra %(free)s para socios no-"
+"Incremento hasta %(vip)s \"chats amigos\" (en vez de %(free)s para socios no-"
 "VIP). Con cada \"chat amigo\" puedes enviar mensajes del chat sin "
 "limitaciones."
 
@@ -5184,7 +5190,7 @@ msgid ""
 msgstr ""
 "\n"
 "Podrás enviar %(cf_num_messages)s mensajes por día a cada persona con quien "
-"ya has tenido contacto (contra %(std_num_messages)s mensajes por día para "
+"ya hayas tenido contacto (contra %(std_num_messages)s mensajes por día para "
 "los socios no VIP)."
 
 #: rs/templates/user_main_helpers/vip_benefits.html:16
