--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -3623,7 +3623,7 @@ msgstr "Mi&nbsp;contraseña&nbsp;nueva"
 
 #: rs/user_profile_details.py:469
 msgid "Verify new password"
-msgstr "Verificar&nbsp;contraseña&nbsp;nueva&nbsp;"
+msgstr "Verificar&nbsp;contraseña&nbsp;nueva"
 
 #: rs/user_profile_main_data.py:78
 msgid "Not Important"
