Added code to allow setting of password and email_address on previously disabled accounts.
Also  improved admin console feedback when running URL-based commands.

--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -2339,7 +2339,7 @@ msgid "is not valid"
 msgstr "no es válido"
 
 #: rs/login_utils.py:433
-msgid "We have eliminated the profile of"
+msgid "We have deleted the profile of"
 msgstr "Hemos eliminado el perfil de"
 
 #: rs/login_utils.py:440
